--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta name="theme-color" content="#ffffff" />
+      <meta name="description" content="Disaster Response App UI" />
+      <link rel="icon" href="/favicon.ico" />
+      <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
+      <link rel="mask-icon" href="/mask-icon.svg" color="#ffffff" />
       <title>Disaster Response App UI</title>
     </head>
 
